force-app/main/default/objects/dw_syteline_custaddr__x/dw_syteline_custaddr__x.object-meta.xml
<CustomObject>
    <description>dw_syteline$custaddr</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_syteline$custaddr</externalName>
    <label>dw_syteline$custaddr</label>
    <pluralLabel>dw_syteline$custaddr</pluralLabel>
</CustomObject>