force-app/main/default/objects/dw_syteline_custaddr__x/fields/addr_2__c.field-meta.xml
<CustomField>
    <fullName>addr_2__c</fullName>
    <description>addr_2</description>
    <externalDeveloperName>addr_2</externalDeveloperName>
    <label>addr_2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>