force-app/main/default/objects/dw_syteline_custaddr__x/fields/amt_over_inv_amt__c.field-meta.xml
<CustomField>
    <fullName>amt_over_inv_amt__c</fullName>
    <description>amt_over_inv_amt</description>
    <externalDeveloperName>amt_over_inv_amt</externalDeveloperName>
    <label>amt_over_inv_amt</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>