force-app/main/default/objects/dw_syteline_custaddr__x/fields/bal_method__c.field-meta.xml
<CustomField>
    <fullName>bal_method__c</fullName>
    <description>bal_method</description>
    <externalDeveloperName>bal_method</externalDeveloperName>
    <label>bal_method</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>