force-app/main/default/objects/dw_syteline_custaddr__x/fields/bill_to_email__c.field-meta.xml
<CustomField>
    <fullName>bill_to_email__c</fullName>
    <description>bill_to_email</description>
    <externalDeveloperName>bill_to_email</externalDeveloperName>
    <label>bill_to_email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>