force-app/main/default/objects/dw_syteline_custaddr__x/fields/carrier_acct__c.field-meta.xml
<CustomField>
    <fullName>carrier_acct__c</fullName>
    <description>carrier_acct</description>
    <externalDeveloperName>carrier_acct</externalDeveloperName>
    <label>carrier_acct</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>