force-app/main/default/objects/dw_syteline_custaddr__x/fields/carrier_bill_to_transportation__c.field-meta.xml
<CustomField>
    <fullName>carrier_bill_to_transportation__c</fullName>
    <description>carrier_bill_to_transportation</description>
    <externalDeveloperName>carrier_bill_to_transportation</externalDeveloperName>
    <label>carrier_bill_to_transportation</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>