force-app/main/default/objects/dw_syteline_custaddr__x/fields/carrier_residential_ind__c.field-meta.xml
<CustomField>
    <fullName>carrier_residential_ind__c</fullName>
    <description>carrier_residential_ind</description>
    <externalDeveloperName>carrier_residential_ind</externalDeveloperName>
    <label>carrier_residential_ind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>