force-app/main/default/objects/dw_syteline_custaddr__x/fields/carrier_upcharge_pct__c.field-meta.xml
<CustomField>
    <fullName>carrier_upcharge_pct__c</fullName>
    <description>carrier_upcharge_pct</description>
    <externalDeveloperName>carrier_upcharge_pct</externalDeveloperName>
    <label>carrier_upcharge_pct</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>