force-app/main/default/objects/dw_syteline_custaddr__x/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <description>city</description>
    <externalDeveloperName>city</externalDeveloperName>
    <label>city</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>