force-app/main/default/objects/dw_syteline_custaddr__x/fields/corp_addr__c.field-meta.xml
<CustomField>
    <fullName>corp_addr__c</fullName>
    <description>corp_addr</description>
    <externalDeveloperName>corp_addr</externalDeveloperName>
    <label>corp_addr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>