force-app/main/default/objects/dw_syteline_custaddr__x/fields/corp_cred__c.field-meta.xml
<CustomField>
    <fullName>corp_cred__c</fullName>
    <description>corp_cred</description>
    <externalDeveloperName>corp_cred</externalDeveloperName>
    <label>corp_cred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>