force-app/main/default/objects/dw_syteline_custaddr__x/fields/corp_cust__c.field-meta.xml
<CustomField>
    <fullName>corp_cust__c</fullName>
    <description>corp_cust</description>
    <externalDeveloperName>corp_cust</externalDeveloperName>
    <label>corp_cust</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>