force-app/main/default/objects/dw_syteline_custaddr__x/fields/credit_hold__c.field-meta.xml
<CustomField>
    <fullName>credit_hold__c</fullName>
    <description>credit_hold</description>
    <externalDeveloperName>credit_hold</externalDeveloperName>
    <label>credit_hold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>