force-app/main/default/objects/dw_syteline_custaddr__x/fields/credit_hold_dt__c.field-meta.xml
<CustomField>
    <fullName>credit_hold_dt__c</fullName>
    <description>credit_hold_dt</description>
    <externalDeveloperName>credit_hold_dt</externalDeveloperName>
    <label>credit_hold_dt</label>
    <type>DateTime</type>
</CustomField>