force-app/main/default/objects/dw_syteline_custaddr__x/fields/credit_hold_rsn__c.field-meta.xml
<CustomField>
    <fullName>credit_hold_rsn__c</fullName>
    <description>credit_hold_rsn</description>
    <externalDeveloperName>credit_hold_rsn</externalDeveloperName>
    <label>credit_hold_rsn</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>