force-app/main/default/objects/dw_syteline_custaddr__x/fields/credit_hold_user__c.field-meta.xml
<CustomField>
    <fullName>credit_hold_user__c</fullName>
    <description>credit_hold_user</description>
    <externalDeveloperName>credit_hold_user</externalDeveloperName>
    <label>credit_hold_user</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>