force-app/main/default/objects/dw_syteline_custaddr__x/fields/credit_limit__c.field-meta.xml
<CustomField>
    <fullName>credit_limit__c</fullName>
    <description>credit_limit</description>
    <externalDeveloperName>credit_limit</externalDeveloperName>
    <label>credit_limit</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>