force-app/main/default/objects/dw_syteline_custaddr__x/fields/curr_cd__c.field-meta.xml
<CustomField>
    <fullName>curr_cd__c</fullName>
    <description>curr_cd</description>
    <externalDeveloperName>curr_cd</externalDeveloperName>
    <label>curr_cd</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>