force-app/main/default/objects/dw_syteline_custaddr__x/fields/customer_nbr__c.field-meta.xml
<CustomField>
    <fullName>customer_nbr__c</fullName>
    <description>customer_nbr</description>
    <externalDeveloperName>customer_nbr</externalDeveloperName>
    <label>customer_nbr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>