force-app/main/default/objects/dw_syteline_custaddr__x/fields/customer_nm__c.field-meta.xml
<CustomField>
    <fullName>customer_nm__c</fullName>
    <description>customer_nm</description>
    <externalDeveloperName>customer_nm</externalDeveloperName>
    <label>customer_nm</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>