force-app/main/default/objects/dw_syteline_custaddr__x/fields/customer_seq_nbr__c.field-meta.xml
<CustomField>
    <fullName>customer_seq_nbr__c</fullName>
    <description>customer_seq_nbr</description>
    <externalDeveloperName>customer_seq_nbr</externalDeveloperName>
    <label>customer_seq_nbr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>