force-app/main/default/objects/dw_syteline_custaddr__x/fields/days_over_inv_due_dt__c.field-meta.xml
<CustomField>
    <fullName>days_over_inv_due_dt__c</fullName>
    <description>days_over_inv_due_dt</description>
    <externalDeveloperName>days_over_inv_due_dt</externalDeveloperName>
    <label>days_over_inv_due_dt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>