force-app/main/default/objects/dw_syteline_custaddr__x/fields/ship_to_email__c.field-meta.xml
<CustomField>
    <fullName>ship_to_email__c</fullName>
    <description>ship_to_email</description>
    <externalDeveloperName>ship_to_email</externalDeveloperName>
    <label>ship_to_email</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>