force-app/main/default/objects/dw_syteline_custaddr__x/fields/uf_pref_type__c.field-meta.xml
<CustomField>
    <fullName>uf_pref_type__c</fullName>
    <description>uf_pref_type</description>
    <externalDeveloperName>uf_pref_type</externalDeveloperName>
    <label>uf_pref_type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>